adicion de responsive a varias secciones

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -44,67 +44,69 @@
     </nav>
     <!-- class="main-wrapper" -->
     <main id="gallery-wrapper">
-        <h1>Galería</h1>
-        <p>Algunos de nuestros productos...</p>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <div class="thumbnail-container">
-            <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <h1 class="gallery-title">Galería</h1>
+        <p class=" gallery-paragraph">Algunos de nuestros productos...</p>
+        <div class="gallery-container">
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="thumbnail-container">
+                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
         </div>
     </main>
     <footer class="pie-de-pagina">
