--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -43,7 +43,7 @@
         </ul>
     </nav>
 
-    <main class="main-wrapper">
+    <main class="main-wrapper" id="que-son-wrapper">
         <h1 class="titulo-que-son">Qué son las uñas press on?</h1>
         <div class="imagen-parrafo">
             <img src="./../img/define-1.jpeg" alt="unias">
