--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -33,7 +33,7 @@
         </form>
     </header>
 
-    <nav>
+    <nav class="nav-container">
         <ul class="nav-menu">
             <li><a href="./servicios.html">Servicios</a></li>
             <li><a href="./galeria.html">Galería</a></li>
