agregue animaciones y corrección de bugs

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,9 +59,7 @@
             <br />
             <label for="mensaje">Dejanos tu mensaje:</label>
             <br />
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10">
-
-            </textarea>
+            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
             <br />
             <input class="form-button" type="submit" value="Enviar">
             <input class="form-button" type="reset" value="Reestablecer">
