adicion de BS a todos los html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <body>
     <header class="cabecera">
-
         <div class="locationContainer">
             <a href="https://www.google.com/maps?q=-38.7191871,-62.2692041">
                 <img id="puntero-img" class="icons" src="./img/puntero-de-ubicacion.png" alt="puntero">
@@ -125,107 +124,58 @@
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <!-- <span class="sr-only">Previous</span> -->
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <!-- <span class="sr-only">Next</span> -->
             </a>
         </div>
 
-        <!-- <article class="presentation">
-            <div class="card-container">
-                <img class="presentation-img" src="./img/sn-wide-presentation.jpg" alt="unias">
-                <div class="presentationTextContainer--left">
-                    <h1 class="presentationTitulo textoOscuro">Uñas para cada ocasión</h1>
-                    <p class="presentationParrafo textoOscuro">Añadí estilo y glamour a todos tus outfits combinándolos
-                        con
-                        los mejores
-                        diseños en press on nails</p>
-                </div>
-            </div>
-        </article>
-        <article class="presentation">
-            <div class="card-container">
-                <img class="presentation-img" src="./img/sn-wide-presentation-2.jpg" alt="unias">
-                <div class="presentationTextContainer--right">
-                    <h1 class="presentationTitulo textoClaro">Variedad de estilos</h1>
-                    <p class="presentationParrafo textoClaro">Elegí entre texturas, colores, brillo y cientos de otras
-                        características
-                        para destacar</p>
-                </div>
-            </div>
-        </article>
-        <article class="presentation">
-            <div class="card-container">
-                <img class="presentation-img" src="./img/sn-wide-presentation-3.jpg" alt="unias">
-                <div class="presentationTextContainer--left">
-                    <h1 class="presentationTitulo textoOscuro">Totalmente personalizadas</h1>
-                    <p class="presentationParrafo textoOscuro">Creá la idea para tus manos o elegí entre cientos de
-                        diseños
-                        hechos 100%
-                        a medida</p>
-                </div>
-            </div>
-        </article> -->
     </main>
-    <!-- Remove the container if you want to extend the Footer to full width. -->
-    <div class="container mw-100">
-        <!-- Footer -->
-        <footer class="text-center text-lg-start text-white" style="background-color: #3a3a3a">
-            <!-- Grid container -->
-            <div class="container p-4 pb-0">
-                <!-- Section: Links -->
-                <section class="">
-                    <!--Grid row-->
-                    <div class="row">
-                        <!-- Grid column -->
-                        <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Sofi Nails
-                            </h6>
-                            <p>Sofi Beauty Studios - Calle Falsa 123, Bahía Blanca Buenos Aries, República Argentina</p>
-                            <p>¿Dudas? ¿Consultas? Comunicate al 0800-33-NAILS (62457)</p>
-                            <p>Lunes a Viernes 8:00 hs a 17:00 hs</p>
-                        </div>
 
-                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+    <footer class="text-center text-lg-start text-white" style="background-color: #3a3a3a">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <section class="">
+                <div class="row">
+                    <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">
+                            Sofi Nails
+                        </h6>
+                        <p>Sofi Beauty Studios - Calle Falsa 123, Bahía Blanca Buenos Aries, República Argentina</p>
+                        <p>¿Dudas? ¿Consultas? Comunicate al 0800-33-NAILS (62457)</p>
+                        <p>Lunes a Viernes 8:00 hs a 17:00 hs</p>
+                    </div>
 
-                            <!-- Facebook -->
-                            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
-                                href="https://www.facebook.com/sofia.meriggi">
-                                <img id="facebook-icon" class="icons" src="./../img/facebook.png" alt="Facebook">
-                            </a>
+                    <div class="col-md-1 col-lg-3 col-xl-3 mx-auto mt-1">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Seguinos!</h6>
 
-                            <!-- Instagram -->
-                            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac"
-                                href="https://www.instagram.com/sofi.nailsbb/" role="button">
-                                <img id="instagram-icon" class="icons" src="./../img/instagram.png" alt="Instagram">
-                            </a>
-                            <!-- Mail -->
-                            <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39"
-                                href="mailto:contacto@sofinails.com" role="button"><img id="mail-icon" class="icons"
-                                    src="./../img/mail.png" alt="Mail">
-                            </a>
+                        <!-- Facebook -->
+                        <a class="btn btn-primary btn-floating m-1 facebook-color"
+                            href="https://www.facebook.com/sofia.meriggi">
+                            <img id="facebook-icon" class="icons" src="./../img/facebook.png" alt="Facebook">
+                        </a>
 
-                        </div>
+                        <!-- Instagram -->
+                        <a class="btn btn-primary btn-floating m-1 instagram-color"
+                            href="https://www.instagram.com/sofi.nailsbb/" role="button">
+                            <img id="instagram-icon" class="icons" src="./../img/instagram.png" alt="Instagram">
+                        </a>
+                        <!-- Mail -->
+                        <a class="btn btn-primary btn-floating m-1 mail-color" href="mailto:contacto@sofinails.com"
+                            role="button"><img id="mail-icon" class="icons" src="./../img/mail.png" alt="Mail">
+                        </a>
 
                     </div>
-                    <!--Grid row-->
-                </section>
-                <!-- Section: Links -->
-            </div>
-            <!-- Grid container -->
 
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                <span>© Sofi Nails 2022 Todos los derechos reservados</span>
-            </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
-    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="text-center p-3 bottom-footer">
+            <span>© Sofi Nails 2022 Todos los derechos reservados</span>
+        </div>
+    </footer>
+
 
     <!-- Scripts de Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
