--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -16,7 +16,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -68,68 +70,84 @@
     <main id="gallery-wrapper">
         <h1 class="gallery-title">Galería</h1>
         <p class=" gallery-paragraph">Algunos de nuestros productos...</p>
-        <div class="gallery-container">
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+
+        <div class="container">
+            <div class="row d-flex flex-wrap align-items-center" data-toggle="modal" data-target="#lightbox">
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-001.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-002.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-003.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-004.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-005.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-006.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-007.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-008.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-009.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-010.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-011.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-012.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-013.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-014.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-015.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-016.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-017.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-018.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-019.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-020.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-021.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-022.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-023.jpeg" alt="Uñas press on" />
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img src="./../img/gallery/gallery-img-024.jpeg" alt="Uñas press on" />
+                </div>
             </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="thumbnail-container">
-                <img class="gallery-thumbnail" src="./../img/dummy-img.png" alt="imagen de ejemplo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-        </div>
+
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #3a3a3a">
         <!-- Grid container -->
