--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -45,13 +45,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active animation-darken">
+                <li class="nav-item  animation-darken">
+                    <a class="nav-link" href="./../index.html">Inicio</a>
+                </li>
+                <li class="nav-item  animation-darken">
                     <a class="nav-link" href="./../pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./../pages/galeria.html">Galería</a>
                 </li>
-                <li class="nav-item animation-darken">
+                <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
                 </li>
                 <li class="nav-item animation-darken">
