--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active animation-darken">
-                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item animation-darken">
+                    <a class="nav-link" href="./pages/galeria.html">Servicios</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./pages/galeria.html">Galería</a>
