--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -45,7 +45,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active animation-darken">
+                <li class="nav-item  animation-darken">
+                    <a class="nav-link" href="./../index.html">Inicio</a>
+                </li>
+                <li class="nav-item  animation-darken">
                     <a class="nav-link" href="./../pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item animation-darken">
@@ -57,7 +60,7 @@
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./../pages/contacto.html">Contaco</a>
                 </li>
-                <li class="nav-item animation-darken">
+                <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/acerca-de.html">Acerca de</a>
                 </li>
 
