--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -46,10 +46,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active animation-darken">
-                    <a class="nav-link" href="./../pages/servicios.html">Servicios</a>
+                <li class="nav-item  animation-darken">
+                    <a class="nav-link" href="./../index.html">Inicio</a>
                 </li>
                 <li class="nav-item animation-darken">
+                    <a class="nav-link" href="./../pages/servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/galeria.html">Galería</a>
                 </li>
                 <li class="nav-item animation-darken">
