--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -45,6 +45,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item  animation-darken">
+                    <a class="nav-link" href="./../index.html">Inicio</a>
+                </li>
                 <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/servicios.html">Servicios</a>
                 </li>
